styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root{
  --white:white;
  --blue:#0080ff;
  --navy:#111B3C;
  --orange:#ff7f00;
}

body {
    background-color: var(--blue);
    color: var(--white);
    font-family: "Roboto", sans-serif;
}

body,
#message-input:placeholder-shown {
  text-align: center;
}

textarea {
  max-width: 90%;
}

.main-text {
  margin: 25px 0;
}

.title {
  font-size: 2.5rem;
}

.description {
  margin-top: 15px;
  font-size: 1.4rem;
  font-weight: bolder;
}

.message-label {
  display: block;
  margin-bottom: 20px;
  font-size: 1.5rem;
  font-weight: bold;
}

#message-input:placeholder-shown,
textarea {
  font-size: 1.1rem;
  border: #111B3C 3px solid;
}

.btn {
  display: block;
  cursor: pointer;
  width: 200px;
  height: 40px;
  margin: 10px auto;
  color: var(--navy);
  background-color: var(--orange);
  border-color: var(--white);
  border-width: 3px;
  font-size: 1.1rem;
  font-weight: bolder;
  content: var(--navy);
}

#result {
  font-size: 2rem;
  margin: 20px 0;
}

